[gd_scene load_steps=7 format=3 uid="uid://bv5mwygr1ojjx"]

[ext_resource type="Script" path="res://main.gd" id="1_g33ke"]
[ext_resource type="PackedScene" uid="uid://ds57e20xmun43" path="res://Assets/Scenes/UI/GlideMeter/glide_meter.tscn" id="2_e23tl"]
[ext_resource type="Texture2D" uid="uid://08f2siq1eikf" path="res://Assets/Sprites/UI/white.png" id="2_gwvkx"]
[ext_resource type="PackedScene" uid="uid://cio1v3oxj3n17" path="res://Assets/Scenes/UI/PromptTooltip/prompt_tooltip.tscn" id="3_2ggxn"]
[ext_resource type="PackedScene" uid="uid://djc82iyxtegvb" path="res://Assets/Scenes/UI/DialogSystem/dialog_system.tscn" id="4_v2lux"]
[ext_resource type="PackedScene" uid="uid://b2aqd0ly6xhwp" path="res://Assets/Scenes/UI/CoinInterface/coin_interface.tscn" id="5_tryme"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g33ke")
_speaker_name = "Goomba"
_intro_dialog = ["Hey!", "Lets play a game lol", "[P] **Okay*/*!"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="Viewport3D" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Viewport2D" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Background" type="TextureRect" parent="SubViewportContainer/Viewport2D"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gwvkx")

[node name="GlideMeter" parent="SubViewportContainer/Viewport2D" instance=ExtResource("2_e23tl")]

[node name="PromptTooltip" parent="SubViewportContainer/Viewport2D" instance=ExtResource("3_2ggxn")]

[node name="DialogSystem" parent="SubViewportContainer/Viewport2D" instance=ExtResource("4_v2lux")]

[node name="CoinInterface" parent="SubViewportContainer/Viewport2D" instance=ExtResource("5_tryme")]
